Fixed the size of full product grid and individuals product card in order to prevent screen flickering when passing through product pages

--- a/src/ProductsSection/ProductPaginationManager/ProductPaginationManager.module.scss
+++ b/src/ProductsSection/ProductPaginationManager/ProductPaginationManager.module.scss
@@ -6,12 +6,12 @@
     position: relative;
 
     .grid_content {
-        height: inherit;
+        height: 1580px;
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
         grid-row-gap: 40px;
+        grid-auto-rows: 500px;
         grid-column-gap: $product-cards-column-gap;
-        align-items: center;
         justify-items: center;
     }
 }
